[package]
name = "android_log-sys"
version = "0.1.0"
authors = [
    "Nerijus Arlauskas <nercury@gmail.com>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nercury/android_log-sys-rs"
description = """
Bindings to Android log Library.
"""

[lib]
name = "android_log_sys"

[dependencies]
libc = "0.2"
