[package]
name = "android_log-sys"
version = "0.1.1"
authors = [
    "Nerijus Arlauskas <nercury@gmail.com>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nercury/android_log-sys-rs"
description = """
FFI bindings to Android log Library.
"""
keywords = ["ffi", "android", "log"]
categories = ["external-ffi-bindings"]

[lib]
name = "android_log_sys"
