[package]
name = "android_log-sys"
version = "0.3.2"
authors = [
    "The android_log_sys Developers",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-mobile/android_log-sys-rs"
description = """
FFI bindings to Android log Library.
"""
documentation = "https://docs.rs/android_log-sys"
keywords = ["ffi", "android", "log"]
categories = ["external-ffi-bindings"]

[lib]
name = "android_log_sys"
